Fixed a Spacing issue on Mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -325,6 +325,10 @@ p {
 		} 
 	}
 	
+	h3 {
+		margin-top: 40px;
+	}	
+	
 	#clients {
 		ul {
 			margin: 50px 0 0 20%;
@@ -350,6 +354,10 @@ p {
 		font-size: em(40);
 	}
 	
+	h3 {
+		margin-top: 40px;
+	}
+	
 	#clients {
 		ul {
 			li {
@@ -373,6 +381,7 @@ p {
 	
 	h3 {
 		font-size: em(30);
+		margin-top: 0;
 	}
 
 	#header {
